# bago

./: .readthedocs.yaml  LICENSE  README.md  Start_Jupyter.ipynb  pyproject.toml
docs/source/: MSdata-obj.rst  conf.py  encodings.rst  genSearchSpace.rst  getMobilePhasePct.rst  getting-started-with-ipynb.rst  getting-started-with-software.rst  gpModel-obj.rst  index.rst  outputConfig.rst  readMSdata.rst  updateModel.rst
src/bago/: __init__.py  bagoMain.py  models.py  params.py  rawDataHelper.py  raw_data_utils.py  workflows.py
src/bago.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
