[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bago"
version = "0.0.27"
authors = [
  { name="Huaxu", email="yhxchem@outlook.com" },
]
maintainers = [
  { name="Huaxu", email="yhxchem@outlook.com" },
]
description = "LC gradient optimization and evaluation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.19.5",
    "pandas>=1.2.4",
    "scikit-learn>=1.0.2",
    "scipy>=1.7.1"
]

[project.urls]
"Homepage" = "https://github.com/Waddlessss/BAGO"