[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bago"
version = "1.0.0"
authors = [
  { name="Huaxu", email="yhxchem@outlook.com" },
]
maintainers = [
  { name="Huaxu", email="yhxchem@outlook.com" },
]
description = "Fully automated LC gradient optimization of optimal compound separation in nontargeted metabolomics"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "CC BY-NC 4.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.19.5",
    "pandas>=1.2.4",
    "scikit-learn>=1.0.2",
    "scipy>=1.7.1"
]

[project.urls]
"Homepage" = "https://github.com/huaxuyu/BAGO"