[build-system]
requires = ["setuptools>=66.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bago"
version = "1.0.1"
authors = [
  { name="Huaxu Yu", email="yhxchem@outlook.com" },
]
maintainers = [
  { name="Huaxu Yu", email="yhxchem@outlook.com" },
]
description = "Optimizing liquid chromatographic gradients for best compound separation in metabolomics"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "CC BY-NC 4.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.19.5",
    "pandas>=1.2.4",
    "scikit-learn>=1.0.2",
    "scipy>=1.7.1",
    "masscube>=1.2.5"
]

[project.urls]
"Homepage" = "https://github.com/huaxuyu/BAGO"